2008-01-28  Ben Motmans <ben.motmans@gmail.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: removed obsolete stuff from the
	  old capabilities system

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Updated add-in category and
	  description.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Updated project file. The order of
	  extended properties won't change anymore.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Updated project files.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Database.Sql.MySql.addin.xml,
	  MonoDevelop.Database.Sql.MySql.mdp: Directory reorganization.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Project file names updated by change
	  in MD path functions.

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.mdp: Fix required GTK# version.

2007-09-26  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.am: Don't deploy .addin.xml file.
	* MonoDevelop.Database.Sql.MySql.mdp: Don't unnecessarily local-copy project
	  references. Don't sync EXTRA_DIST with deploy files. Add Makefile.am to
	  file list.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Sql.MySql.addin.xml: Bump MD version.

2007-09-20 Ben Motmans <ben.motmans@gmail.com> 

	* Makefile.am: removed incorrect references

2007-09-20 Ben Motmans <ben.motmans@gmail.com> 

	* Makefile.am: changed reference to contrib/MySql
