@@ -1,0 +1,16 @@
+
+using System;
+
+namespace MonoDevelop.Database.Sql.MySql
+{
+	
+	
+	public partial class MySqlColumnEditorWidget : Gtk.Bin
+	{
+		
+		public MySqlColumnEditorWidget()
+		{
+			this.Build();
+		}
+	}
+}
